--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/lokanx/courses-angular2-persons.git"
+    },
     "scripts": {
         "compile": "run tsc",
         "tsc": "tsc -p src -w",
