--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "author": "Björn Sjögren",
     "license": "ISC",
     "dependencies": {
-        "angular2": "2.0.0-alpha.53",
+        "angular2": "2.0.0-beta.0",
         "bootstrap": "3.3.6",
         "es6-shim": "^0.33.13",
-        "systemjs": "0.19.2"
+        "reflect-metadata": "0.1.2",
+        "rxjs": "5.0.0-beta.0",
+        "systemjs": "0.19.6",
+        "zone.js": "0.5.10"
     },
     "devDependencies": {
-        "jasmine-core": "2.4.1",
+        "concurrently": "^1.0.0",
         "live-server": "^0.8.2",
-        "typescript": "^1.6.2"
+        "typescript": "^1.7.3",
+        "jasmine-core": "2.4.1"
     }
 }
